feat: 配置GitHub Actions自动构建前端并移除营销内容
- 添加GitHub Actions配置文件，支持自动构建Vue前端
- 移除所有营销和宣传内容（版权信息、公司链接等）
- 修改页面标题为中性的'在线考试系统'
- 更新README文档，添加GitHub Actions使用说明
- 支持手动触发和自动触发构建
- 构建产物可直接下载用于部署

--- a/source/wx/xzs-student/app.json
+++ b/source/wx/xzs-student/app.json
@@ -16,7 +16,7 @@
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTitleText": "学之思",
+    "navigationBarTitleText": "在线考试",
     "navigationBarTextStyle": "black",
     "backgroundTextStyle": "dark"
   },
